# slac

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  install.sh  pyproject.toml  test1_raman.slac.md
.github/workflows/: ci.yml
examples/: bug_fixer.slac.md  flaky_hunter.slac.md  index.md  pr_babysitter.slac.md
integrations/claude-code/: SKILL.md
integrations/codex/: AGENTS.md
linter/: rules.md  slac_lint.py
mappings/: claude-code.md  codex.md
schema/: slac.schema.json
src/slac/: __init__.py  __main__.py  cli.py  evaluator.py  linter.py  runner.py  state.py
src/slac/backends/: __init__.py  base.py  claude_cli.py
tests/: test_backends.py  test_evaluator.py  test_linter.py  test_runner_dryrun.py  test_state.py
